Add posttest probability disease filter and batch analysis.